--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.4.4",
     "mysql2": "^3.6.5",
     "node-cron": "^3.0.3"
   }
