--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
     "mysql2": "^3.6.5",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "nodejs-nodemailer-outlook": "^1.2.4",
+    "nodemailer": "^6.9.8",
+    "twilio": "^5.0.0-rc.1"
   }
 }
