--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "node-cron": "^3.0.3",
     "nodejs-nodemailer-outlook": "^1.2.4",
     "nodemailer": "^6.9.8",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "pg-promise": "^11.5.4",
+    "postgres": "^3.4.3",
+    "sequelize": "^6.35.2",
     "twilio": "^5.0.0-rc.1"
   }
 }
